# laptop_rag_assistant

./: .gitignore  README.md  main.py  pyproject.toml
app/: index_builder.py  llm_generator.py  parser.py  rag_query.py
data/: faiss.index  specs.db  specs_parsed.json
